2005-01-28  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: Differ between dav:// and http://.
	So only do PORPFINDs and other dav specific methods when dav://
	was specified in the URL. This will also fix bug #164019.

2005-01-28  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: Beautify some code and always add
	a trailing slash on do_open_directory ().

2005-01-28  Sebastien Bacher  <seb128@debian.org>

	reviewed by: Christophe Fergeau <teuf@gnome.org>
	
	* modules/ftp-method.c: (toggle_winnt_into_unix_mode),
	(ftp_connection_create), (do_read_directory): 
	patch from Simon Howard <fraggle@alkali.org> to fix the directory 
	listings when connecting a windows ftp server (Closes: #151594).

2005-01-26  Nate Nielsen  <nielsen@memberwebs.com>

	* modules/smb-method.c: Fix (initial_authentication) so that server 
	connection cache lookup works properly.
	
2005-01-26  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomevfs/gnome-vfs-monitor.c: (destroy_monitor_handle):
	Fix a typo in a g_warning.

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.9.90 ===

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* test/test-uri.c (main):
	Fix test

	* NEWS:
	Update for release.

	* configure.in: 
	Bump version to 2.9.90
	
2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (copy_directory):
	Support setgid directories.
	Patch from Sjoerd Simons <sjoerd@luon.net>

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c:
	Cache passwords on a per-server level, not per-share.
	Patch from Nate	Nielsen <nielsen@memberwebs.com>

2005-01-24  Nate Nielsen <nielsen@memberwebs.com>

	* modules/smb-method.c: (try_init) Use new flag for supressing automatic
	guest login. See: https://bugzilla.samba.org/show_bug.cgi?id=2092#c5
	
2005-01-18  Alexander Larsson  <alexl@redhat.com>

	* daemon/gnome-vfs-daemon.c: (main):